basicGL

   Graphic Class
      1) The data type has been changed from String to Identifier for setColor(),
      getColorName(), the 'color' slot and the SET_COLOR event.
   
--------------------------------------------------------------------------------
dis

   NetIO Class
      1) netInputHander() -- changed the large input buffer, 'packet', from a local
      variable to a member variable and renamed it to 'inputBuffer'; i.e., no longer
      on the stack.

--------------------------------------------------------------------------------
gui-glut


--------------------------------------------------------------------------------
otw

   OtwCigiCl Class
      1) setBuildingData() -- added missing creation of the damage control
      structure (bug fix)

--------------------------------------------------------------------------------
recorder

   DataRecord.proto
      1) added the transmitting (origin) player ID and the target player ID
      to the EmissionData message.

   DataRecorder class
      1) (bug fix) Corrected the mapping for the DI and AI handlers

      2) (bug fix) The player ID of the origin of the emission was improperly
      assigned to the track ID.
         a) Corrected the track player IDs
         b) Now setting the origin and target player IDs in the EmissionData
            message.

      3) Added several zero pointer guards

--------------------------------------------------------------------------------
simulation

   Player Class
      1) The data type has been changed from String to Identifier for isName(),
      getName() and setName().

      2) setType() now makes a copy of the argument instead of just setting
      a pointer to the original


   Station Class
      1) Fixed memory leak in setSlotOutTheWindow();


--------------------------------------------------------------------------------
vehicle


--------------------------------------------------------------------------------
